@@ -415,6 +415,7 @@ pm-francium-glass-ampule=Francium glass ampule
 pm-caesium-glass-ampule=Casesium glass ampule
 pm-nickel-tungsten-catalyst=Nickel-tungsten catalyst (Ni-W)
 pm-strontium-fuel-rod=Strontium fuel rod
+pm-gravel=Gravel
 
 automation-science-pack=Transition metal pack
 logistic-science-pack=Advanced transition metal pack
@@ -1463,6 +1464,7 @@ pm-physical-prpjectile-damage=Physical projectile damage
 pm-weapon-shooting-speed=Weapon shooting speed
 pm-glass-ampules=Glass ampules
 pm-strontium-fuel-rods=Strontium fuel rods
+pm-advanced-sand-processing=Advanced sand processing
 
 pm-ferric-chloride-processing=Ferric chloride processing
 pm-advanced-chlorine-processing=Advanced chlorine processing
@@ -1622,6 +1624,7 @@ pm-octane-fuel-canisters=More advanced fuel production by using more advanced hy
 pm-stronger-beacon-distribution=Slight rewrites of the microcode in beacons allows for stronger distribution effectiveness.
 pm-glass-ampules=A way to store dangerous elements, for transportation. Can be re-used nearly an infinite amount of times.
 pm-strontium-fuel-rods=A more efficient fuel that contains strontium, instead of using the bare metal.
+pm-advanced-sand-processing=Advanced ways to crush stone to manufacture glass.
 
 pm-ferric-chloride-processing=A compound of a ferrous metal and chlorine, used in cleaning waste water or acidic processes.
 pm-advanced-chlorine-processing=A more sophisticated way of making Hydrochloric acid, while using.. no chlorine.
