@@ -4158,8 +4158,8 @@ data:extend({
     effects = 
     {
       PM.unlock_recipe("pm-carbon"),
-      PM.unlock_recipe("pm-sand"),
-      PM.unlock_recipe("pm-glass-pane"),
+      PM.unlock_recipe("pm-gravel"),
+      PM.unlock_recipe("pm-gravel-glass-pane"),
       PM.unlock_recipe("pm-evaporator")
     },
     prerequisites = {},
@@ -4828,6 +4828,29 @@ data:extend({
       time = 60
     }
   },
+  {
+    type = "technology",
+    name = "pm-advanced-sand-processing",
+    icon_size = 256,
+    icon = "__periodic-madness__/graphics/icons/placeholder-tech.png",
+    effects =
+    {
+      PM.unlock_recipe("pm-sand"),
+      PM.unlock_recipe("pm-gravel-crushing"),
+      PM.unlock_recipe("pm-glass-pane")
+    },
+    prerequisites = {"pm-crushing", "automation-2"},
+    unit =
+    {
+      count = 50,
+      ingredients =
+      {
+        {"automation-science-pack", 1},
+        {"logistic-science-pack", 1},
+      },
+      time = 30
+    }
+  }
   -- {
   --    type = "technology",
   --    name = "pm-metharicephentine",
